
[package]
name = "solana-bpf-accountprogram"
version = "0.0.1"
description = "program written in Rust"
authors = ["novelty <giorgi.ghortlishvili@gmail.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://novelty.today/"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.10.17"

[dev-dependencies]
solana-program-test = "1.10.17"
solana-sdk = "1.10.17"

[lib]
name = "accountprogram"
crate-type = ["cdylib", "lib"]
